# actions-cloud

./: .angular-cli.json  .circleci.yml  .firebaserc  .gitignore  BUILD.bazel  README.md  WORKSPACE  database.rules.json  firebase.json  package-lock.json  package.json  tsconfig.json  tslint.json
e2e/: app.e2e-spec.ts
gcp-storage-transfer/: actions-on-google-project-template.tsv  tsv.sh
src/: BUILD.bazel  index.html  main.ts  privacy-policy.html  styles.css
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  app.routes.ts  beta-access.service.ts
src/app/_shared/carousel/: carousel.module.ts
src/app/_shared/carousel/carousel-group/: carousel-group.component.ts
src/app/_shared/mat/: mat.module.ts
src/app/_shared/parallax/: parallax.css
src/app/builder/: builder.module.ts  gcp.service.ts  gcp.types.ts  github.service.ts  notifier.service.ts
src/app/builder/builder/: builder.component.css  builder.component.html  builder.component.spec.ts  builder.component.ts
src/app/welcome/: welcome.component.css  welcome.component.html  welcome.component.ts
src/app/wizard/: gcp.service.ts  gcp.types.ts  github.service.ts  notifier.service.ts  session.service.ts  wizard.module.ts
src/app/wizard/wizard/: wizard.component.css  wizard.component.expansion.html  wizard.component.html  wizard.component.ts
src/assets/: browserconfig.xml  manifest.json  privacy-policy.html
src/environments/: environment.prod.ts  environment.ts
tools/: setup-gcp.sh
tools/gcp-storage-transfer/: tsv.sh
tools/starter/: gcp.sh
(+1 files in other folders)
